extends Node

@onready var BuildTower = $BuildTower
@onready var SelectTower = $SelectTower
@onready var DestroyTower = $DestroyTower
@onready var ShootArrow = $ShootArrow
@onready var EnemyMove = $EnemyMove
@onready var EnemyDeath = $EnemyDeath
@onready var Lose = $Lose
@onready var BG_Music_BuildingStage = $BG_Music_BuildingStage
@onready var StartStage = $StartStage
@onready var UIHoverButtonSound = $UIHoverButtonSound
@onready var BG_Music_MainMenu = $BG_Music_MainMenu
#@onready var StartStage = $StartStage
